--- a/tenants/bi-team/Chart.yaml
+++ b/tenants/bi-team/Chart.yaml
@@ -1,5 +1,5 @@
 apiVersion: v2
-name: configstore
+name: configStore-bi-team
 description: A Helm chart for Kubernetes
 
 # A chart can be either an 'application' or a 'library' chart.
@@ -22,3 +22,7 @@ version: 0.1.0
 # follow Semantic Versioning. They should reflect the version the application is using.
 # It is recommended to use it with quotes.
 appVersion: "1.16.0"
+dependencies:
+  - name: configstore
+    repository: "https://nospof.github.io/helm-charts/" 
+    version: 0.1.0
