--- a/apps/values.yaml
+++ b/apps/values.yaml
@@ -1,8 +1,16 @@
 apps:
-  - name: configstore-bi-team
+  - name: digital-generator-bi-team
     valueFiles: 
       - values.yaml
-    path: "tenants/bi-team"
+    path: "tenants/bi-team/digital-generator"
+    repoUrl: https://github.com/seitosan/configstore.git
+    revision: "main"
+    namespace: argocd
+    server: https://kubernetes.default.svc
+  - name: digital-generator-bi-team
+    valueFiles: 
+      - values.yaml
+    path: "tenants/bi-team/digital-generator"
     repoUrl: https://github.com/seitosan/configstore.git
     revision: "main"
     namespace: argocd
