--- a/tenants/bi-team/digital-generator/values.yaml
+++ b/tenants/bi-team/digital-generator/values.yaml
@@ -10,4 +10,8 @@ PropertyList:
       namespace: engenerring
       items: 
         url_prefix: "/audit-digital-generator"
+    - name: poulet
+      namespace: engenerring
+      items: 
+        poulet: "tartampion"
         
